<resources>
    <string name="app_name">ScroogeMcApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gpstracker">Map</string>
    <string name="no_location_detected">No location detected</string>
    <string name="enter_category">Enter Category</string>
    <string name="name">Name</string>
    <string name="restart">Restart</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="description">Description</string>
    <string name="amount">amount</string>
    <string name="address">address</string>
</resources>
