<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/enter_category"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_category"
        android:textSize="24sp"
        tools:background="@android:color/holo_blue_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/eCategoryNameEditText"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/categoryDescriptionEditText"
        android:hint="@string/description" />

</LinearLayout>